gcc/testsuite/g++.dg/lookup/ns2.C
@@ -1,0 +1,17 @@
+// PR c++/18161
+
+namespace m
+{
+  namespace n
+  {
+  }
+}
+
+namespace n
+{
+}
+
+namespace o
+{
+  namespace n = ::m::n;
+}
