gcc/testsuite/g++.dg/template/enum4.C
@@ -1,0 +1,9 @@
+// PR c++/18020
+
+template <typename> struct bar {
+  enum {
+    e1 = 1,
+    e2 = ~e1
+  };
+};
+template struct bar<int>;
